--- a/food/index.html
+++ b/food/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Foodblog</title>
+	<title>Foodblog | Home</title>
 	<link rel="stylesheet" type="text/css" href="style\style.css">
 </head>
 <body>
